# Pig-Dice

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  log.txt
include/: ai.h  game.h  prints.h  util.h
src/: ai.cpp  game.cpp  main.cpp  prints.cpp  util.cpp
